no unset CONFIG_PC_KEYB for automate config
Signed-off-by: Murachue <392264+murachue@users.noreply.github.com>

--- a/linux/arch/mipsnommu/config.in
+++ b/linux/arch/mipsnommu/config.in
@@ -34,7 +34,7 @@ unset CONFIG_PCI
 unset CONFIG_MIPS_JAZZ
 unset CONFIG_SWAP_IO_SPACE
 unset CONFIG_VIDEO_G364
-unset CONFIG_PC_KEYB
+#unset CONFIG_PC_KEYB
 
 define_bool CONFIG_MCA n
 define_bool CONFIG_SBUS n
